# fast-api-test

./: main.py  pyproject.toml
