[tool.poetry]
name = "fast-api-test"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
